--- a/210326-sample.md
+++ b/210326-sample.md
@@ -26,17 +26,18 @@
 
 ぜひ、興味のある人は委員会の会議に顔を出してください。メーリングリストだけの参加でも大丈夫です。「情報に関するあらゆる問題を取り扱う委員会」ですから、興味を持って参加すれば、何かしらの実りがあると思います。花形王道が苦手な人、ネトゲの達人、アニメ好き、アクアリウムマン……情報問題対策委員会の典型人材に限らない、沢山の人の参加をお待ちしています。
 
-これまでのシンポジウム等開催一覧
-・2019年10月　電子メールの公文書性とその管理
-・2018年 9月　弁護士業務に生かせる情報公開請求
-・2017年 9月　監視カメラで逮捕される!?電子情報社会の捜査活動とプライバシー
-・2016年 6月　プライバシーをめぐる法律問題-話題のドローンを題材に-
+#### これまでのシンポジウム等開催一覧
+
+* 2019年10月　電子メールの公文書性とその管理
+* 2018年 9月　弁護士業務に生かせる情報公開請求
+* 2017年 9月　監視カメラで逮捕される!?電子情報社会の捜査活動とプライバシー
+* 2016年 6月　プライバシーをめぐる法律問題-話題のドローンを題材に-
 
 ▲2017年9月開催 シンポジウム
 
-今後の委員会開催日程
-2月24日（水）15：00〜　@1107・1108会議室
-3月24日（水）15：00〜　@1107・1108会議室
-いずれの会議もZoomでご参加いただけます。
-担当事務局:大阪弁護士会委員会部人権課
-TEL:06-6364-1227
+> 今後の委員会開催日程
+> 2月24日（水）15：00〜　@1107・1108会議室
+> 3月24日（水）15：00〜　@1107・1108会議室
+> いずれの会議もZoomでご参加いただけます。
+> 担当事務局:大阪弁護士会委員会部人権課
+> TEL:06-6364-1227
