--- a/210326-sample.md
+++ b/210326-sample.md
@@ -36,8 +36,8 @@
 ▲2017年9月開催 シンポジウム
 
 > 今後の委員会開催日程
-> 2月24日（水）15：00〜　@1107・1108会議室
-> 3月24日（水）15：00〜　@1107・1108会議室
-> いずれの会議もZoomでご参加いただけます。
-> 担当事務局:大阪弁護士会委員会部人権課
-> TEL:06-6364-1227
+  2月24日（水）15：00〜　@1107・1108会議室
+  3月24日（水）15：00〜　@1107・1108会議室
+  いずれの会議もZoomでご参加いただけます。
+  担当事務局:大阪弁護士会委員会部人権課
+  TEL:06-6364-1227
